# project-il-legible

./: .env  .flaskenv  .gitignore  Exploration.ipynb  Illinois_Sunshine_donations_pull.py  Procfile  README.md  clean_name_column.py  config.py  create_datasets.sh  donation_stats.csv  donations_by_sponsor.py  explore_donations.ipynb  main.py  openstates_exploration.ipynb  project_il_legible.py  pyproject.toml  unique_sponsors.csv
.ipynb_checkpoints/: Exploration-checkpoint.ipynb
app/: __init__.py  cli.py  models.py
app/blueprints/: api.py  bills.py  home.py  insights.py  sponsors.py  template_filters.py  viz.py
app/database/: seeds.py
app/static/: style.css
app/templates/: base.html  index.html
data_viz/: average_donation_hist.html  bill_passage_pct_entity_donations_scatter.html  bill_success_legislator.html  bills_introduced_legislator.html  entity_donation_barchart.html  in_state_donation_barchart.html  large_donation_barchart.html  num_bills_corp_donations_scatter.html  num_bills_entity_donations_scatter.html  num_bills_total_donations_scatter.html  num_bills_total_donations_scatter_wo_outliers.html  prelim_viz.ipynb  sankey.py  total_donations_hist.html  visuals.py
donations/: Abdelnasser Rashid.csv  Adriane Johnson.csv  Amy Elik.csv  Anna Moeller.csv  Anne Stava.csv  Anthony DeLuca.csv  Barbara Hernandez.csv  Bill Cunningham.csv  Blaine Wilhour.csv  Bob Morgan.csv  Brad Halbrook.csv  Brad Stephens.csv  Brandun Schweizer.csv  Celina Villanueva.csv  Chapin Rose.csv  Charles Meier.csv  Chris Balkema.csv  Chris Miller.csv  Christopher Belt.csv  Craig Wilcox.csv  Cristina Castro.csv  Cyril Nichols.csv  Dagmara Avelar.csv  Dale Fowler.csv  Dan Caulkins.csv  Dan Swanson.csv  Dan Ugaste.csv  Daniel Didech.csv  Dave Severin.csv  Dave Syverson.csv  David Friess.csv  Debbie Meyers-Martin.csv  Dennis Tipsword.csv  Diane Blair-Sherlock.csv  Don Harmon.csv  Doris Turner.csv  Erica Harriss.csv  Fred Crespo.csv  Gregg Johnson.csv  Harry Benton.csv  (+68 more)
exploration/: Exploration.ipynb  aggregate_openstates.py  bill_success_exporatory.ipynb  bulk_data_urls.csv  endpoint_params.py  explore.py  explore_donations.ipynb  openstates_exploration.ipynb
final_data/: bills.csv  sponsors.csv
flaskr/: __init__.py  app.py  db.py  models.py
logs/: projectillegible.log.1  projectillegible.log.2  projectillegible.log.3
milestones/: milestone1.md  milestone2.md
pull_IL_sunshine/: Illinois_Sunshine_donations_pull.py  donations_by_sponsor.py  merge_and_output.py
pull_open_states/: aggregate_openstates.py  clean_name_column.py
tests/: conftest.py  data.sql  test_aggregate_openstates.py  test_analysis.py  test_db.py  test_factory.py  test_il_sunshine_download.py
(+58 files in other folders)
